--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-session": "^1.18.0",
+    "express-validator": "^7.1.0",
     "mongodb": "^6.6.0",
     "mongoose": "^8.3.3"
   },
