--- a/vercel.json
+++ b/vercel.json
@@ -17,7 +17,7 @@
                 "DELETE"
             ],
             "headers": {
-                "Access-Control-Allow-Origin": "https://academia-hub-front-end.vercel.app",
+                "Access-Control-Allow-Origin": "https://academia-hub-front-end.vercel.app/*",
                 "Access-Control-Allow-Credentials": "true",
                 "Access-Control-Allow-Headers": "X-CSRF-Token, X-Requested-With, Accept, Accept-Version, Content-Length, Content-MD5, Content-Type, Date, X-Api-Version"
             }
