--- a/vercel.json
+++ b/vercel.json
@@ -1,27 +1,15 @@
 {
     "version": 2,
     "builds": [
-      {
-        "src": "./index.js",
-        "use": "@vercel/node"
-      }
+        {
+            "src": "./index.js",
+            "use": "@vercel/node"
+        }
     ],
     "routes": [
-      {
-        "src": "/(.*)",
-        "dest": "/",
-        "methods": [
-          "GET",
-          "POST",
-          "PUT",
-          "DELETE"
-        ],
-        "headers": {
-          "Access-Control-Allow-Origin": "https://academia-hub-front-end.vercel.app",
-          "Access-Control-Allow-Credentials": "true",
-          "Access-Control-Allow-Headers": "X-CSRF-Token, X-Requested-With, Accept, Accept-Version, Content-Length, Content-MD5, Content-Type, Date, X-Api-Version"
+        {
+            "src": "/(.*)",
+            "dest": "/"
         }
-      }
     ]
-  }
-  
+}
